# workflow

./: .dockerignore  Cargo.toml  Makefile  README.md  config.toml
deploy/: .env.example  Dockerfile  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/: architecture.md  frontend-architecture.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/api/: apikey.ts  approval.ts  auth.ts  request.ts  task-instance.ts  task.ts  tenant.ts  user.ts  variable.ts  workflow.ts
frontend/src/components/common/: json-viewer.vue  status-tag.vue
frontend/src/components/layout/: app-layout.vue  header-bar.vue  sidebar-menu.vue
frontend/src/composables/: use-permission.ts  use-polling.ts
frontend/src/router/: guards.ts  index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: api.d.ts  apikey.d.ts  approval.d.ts  auth.d.ts  pagination.d.ts  task.d.ts  tenant.d.ts  user.d.ts  variable.d.ts  workflow.d.ts
frontend/src/utils/: constants.ts  format.ts  token.ts
frontend/src/views/apikey/: list.vue
frontend/src/views/approval/: detail.vue  list.vue
frontend/src/views/auth/: login.vue  register.vue
scripts/: fix_status_casing.js
src/: config.rs  lib.rs  main.rs
src/crates/api/: Cargo.toml
src/crates/api/src/: error.rs  lib.rs  router.rs
src/crates/api/src/handler/: mod.rs
src/crates/api/src/handler/apikey/: mod.rs
src/crates/api/src/handler/approval/: mod.rs
src/crates/api/src/handler/auth/: mod.rs
src/crates/api/src/handler/task/: mod.rs  task_handler.rs  task_instance_handler.rs  task_instance_request.rs
src/crates/api/src/handler/tenant/: mod.rs
src/crates/api/src/handler/user/: mod.rs
src/crates/api/src/handler/variable/: mod.rs
src/crates/api/src/handler/workflow/: mod.rs  workflow_handler.rs  workflow_instance_handler.rs  workflow_instance_request.rs
src/crates/api/src/middleware/: auth.rs  mod.rs  permission.rs  permission_guard.rs
src/crates/api/src/request/: mod.rs
src/crates/api/src/response/: response.rs
src/crates/common/: Cargo.toml
src/crates/domain/: Cargo.toml
src/crates/domain/src/: lib.rs
src/crates/domain/src/apikey/: service.rs
src/crates/domain/src/apikey/entity/: mod.rs
src/crates/domain/src/apikey/repository/: mod.rs
src/crates/domain/src/approval/: service.rs
src/crates/domain/src/approval/entity/: mod.rs
src/crates/domain/src/approval/repository/: mod.rs
src/crates/domain/src/plugin/: interface.rs  manager.rs  mod.rs  rhai_engine.rs
src/crates/domain/src/plugin/manager/: apply_exec.rs  ensure_task_job.rs  loop_action.rs  mod.rs  workflow.rs
src/crates/domain/src/plugin/plugins/: approval.rs  contextrewrite.rs  forkjoin.rs  http.rs  ifcondition.rs  llm.rs  mod.rs  parallel.rs  pause.rs  subworkflow.rs
src/crates/domain/src/shared/: form.rs  job.rs  mod.rs  workflow.rs
src/crates/domain/src/sweeper/: mod.rs
src/crates/domain/src/task/: http_template_resolve.rs  interface.rs  manager.rs  mod.rs  service.rs
src/crates/domain/src/task/entity/: mod.rs  query.rs  task_definition.rs
src/crates/domain/src/task/executors/: http.rs  llm.rs  mod.rs
src/crates/domain/src/task/repository/: mod.rs
src/crates/domain/src/tenant/: service.rs
src/crates/domain/src/tenant/entity/: mod.rs
src/crates/domain/src/tenant/repository/: mod.rs
src/crates/domain/src/user/: service.rs
src/crates/domain/src/user/entity/: mod.rs
src/crates/domain/src/user/repository/: mod.rs
src/crates/domain/src/variable/: service.rs
src/crates/domain/src/variable/entity/: mod.rs
src/crates/domain/src/variable/repository/: mod.rs
src/crates/domain/src/workflow/: mod.rs  resolution_context.rs  service.rs
src/crates/domain/src/workflow/entity/: mod.rs  query.rs  workflow_definition.rs
src/crates/domain/src/workflow/repository/: mod.rs
src/crates/infrastructure/: Cargo.toml
src/crates/infrastructure/src/: lib.rs
src/crates/infrastructure/src/mongodb/: indexes.rs  mod.rs
src/crates/infrastructure/src/mongodb/apikey/: apikey_repository_impl.rs  mod.rs
src/crates/infrastructure/src/mongodb/approval/: approval_repository_impl.rs  mod.rs
src/crates/infrastructure/src/mongodb/task/: task_repository_impl.rs
src/crates/infrastructure/src/mongodb/tenant/: tenant_repository_impl.rs
src/crates/infrastructure/src/mongodb/user/: user_repository_impl.rs
src/crates/infrastructure/src/mongodb/variable/: mod.rs  variable_repository_impl.rs
src/crates/infrastructure/src/mongodb/workflow/: mod.rs  workflow_repository_impl.rs
src/crates/infrastructure/src/queue/: consumer.rs  dispatcher.rs  mod.rs  producer.rs
(+26 files in other folders)
