[package]
name = "workflow"
version = "0.1.0"
edition = "2024"



[workspace]
members = [
    "src/crates/api",
    "src/crates/domain",
    "src/crates/infrastructure",
    "src/crates/common",
]

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
domain = { path = "src/crates/domain" }
api = { path = "src/crates/api" }
infrastructure = { path = "src/crates/infrastructure" }
tokio = { version = "1.51.0", features = ["full"] }
apalis = "0.7.4"
apalis-redis = "0.7.4"
mongodb = "3.5.2"
async-trait = "0.1.89"
anyhow = "1.0.102"
toml = "1.1.2+spec-1.1.0"
clap = { version = "4.6.0", features = ["derive"] }
bcrypt = "0.19.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.10.0"
