[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
jsonwebtoken = "9"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
