[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.19.0"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1", features = ["v4"] }
common = { path = "../common" }