[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["time"] }
rhai = "1.24.0"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"

