[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
tokio = {version = "1.48.0", features = ["full"]}
domain = { path = "../domain" }
common = { path = "../common" }
apalis = "0.7.4"
apalis-redis = "0.7.4"
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
anyhow = "1.0.100"

[dependencies.mongodb]
version = "3.4.1"
